added setup link

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -101,7 +101,7 @@
 	<body data-smart-device-detect
 		data-smart-fast-click
 		data-smart-layout
-		data-smart-page-title="SmartAdmin AngularJS">
+		data-smart-page-title="Smart Employer - Happy Employee">
 
 		<!-- ui-view container -->
 
