some css changes

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -103,7 +103,7 @@
 	<body data-smart-device-detect
 		data-smart-fast-click
 		data-smart-layout
-		data-smart-page-title="Smart Employer - Happy Employee">
+		data-smart-page-title="Smart Employer - Happy Employee" class="minified">
 
 		<!-- ui-view container -->
 
