added programs and stuff

--- a/app/public/app/dashboard2/dashboard.html
+++ b/app/public/app/dashboard2/dashboard.html
@@ -322,7 +322,11 @@
     <div class ="col-md-3" style="background:grey;">
     	<div class = "company-text">
     		<h1>Welcome</h1>
-    		<span>This is going to be some company text, for now it it just template</span>
+    		<div class = "information-chat"><span class = "color innovation-color"></span><sapn>Innovation</span></div>
+            <div class = "information-chat"><span class = "color client-care-color"></span><sapn>Client Care</span></div>
+            <div class = "information-chat"><span class = "color operational-excelence-color"></span><sapn>Operational Excelence</span></div>
+            <div class = "information-chat"><span class = "color integrity-color"></span><sapn>Integrity</span></div>
+            <div class = "information-chat"><span class = "color deliver-the-difference-color"></span><sapn>Deliver the difference</span></div>
     	</div>
     </div>
 		
