--- a/app/public/app/dashboard4/dashboard.html
+++ b/app/public/app/dashboard4/dashboard.html
@@ -155,8 +155,35 @@
     </div>
     <div class ="col-md-3" style="background:grey;">
     	<div class = "company-text">
-    		<h1>Welcome</h1>
-    		<span>This is going to be some company text, for now it it just template</span>
+    		<h3>UPCOMING ANNIVERSERIES</h3>
+    		<div  class="line-upcoming-annuviersary">
+                <img class = "float-left" style="border-radius: 20px; border: 2px solid silver; margin: 2px;" src="styles/img/avatars/1.png" alt="user" height="35" width="35">
+                <div class = "text-contener-anniverseries">
+                    <span class="user-link">
+                        <a href-void>Shannon Dickerson</a>
+                    </span>
+                    <span class = "upcoming-event" >hello pakistan</span>
+                </div>
+            </div>
+            <div  class="line-upcoming-annuviersary">
+                <img class = "float-left" style="border-radius: 20px; border: 2px solid silver; margin: 2px;" src="styles/img/avatars/2.png" alt="user" height="35" width="35">
+                <div class = "text-contener-anniverseries">
+                    <span class="user-link">
+                        <a href-void>Shannon Dickerson</a>
+                    </span>
+                    <span class = "upcoming-event" >hello pakistan</span>
+                </div>
+            </div>
+            <div  class="line-upcoming-annuviersary">
+                <img class = "float-left" style="border-radius: 20px; border: 2px solid silver; margin: 2px;" src="styles/img/avatars/3.png" alt="user" height="35" width="35">
+                <div class = "text-contener-anniverseries">
+                    <span class="user-link">
+                        <a href-void>Shannon Dickerson</a>
+                    </span>
+                    <span class = "upcoming-event" >hello pakistan</span>
+                </div>
+            </div>
+
     	</div>
     </div>
 </div>
