--- a/app/public/app/dashboard7/dashboard.html
+++ b/app/public/app/dashboard7/dashboard.html
@@ -42,7 +42,7 @@
         <div class="col-md-4" style="padding-left: 0px;">
           
     <div class="btn-group col-md-12 padding-right-zero" data-dropdown="">
-    <button class="btn btn-info dropdown-toggle col-md-12" aria-expanded="false" aria-haspopup="true"><div class="dropdown-text">
+    <button class="btn btn-info disabled dropdown-toggle col-md-12" aria-expanded="false" aria-haspopup="true"><div class="dropdown-text">
         Award Nomination </div><span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
