--- a/app/public/app/dashboard3/dashboard.html
+++ b/app/public/app/dashboard3/dashboard.html
@@ -148,10 +148,43 @@
 </div>
     </div>
     <div class ="col-md-3" style="background:grey;">
-    	<div class = "company-text">
-    		<h1>Welcome</h1>
-    		<span>This is going to be some company text, for now it it just template</span>
-    	</div>
+    	<div class="company-text">
+        <div class = "col-md-12">
+            <h1>Welcome</h1>
+            <div class="information-chat"><span class="color innovation-color"></span><sapn>Innovation</sapn></div>
+            <div class="information-chat"><span class="color client-care-color"></span><sapn>Client Care</sapn></div>
+            <div class="information-chat"><span class="color operational-excelence-color"></span><sapn>Operational Excelence</sapn></div>
+            <div class="information-chat"><span class="color integrity-color"></span><sapn>Integrity</sapn></div>
+            <div class="information-chat"><span class="color deliver-the-difference-color"></span><sapn>Deliver the difference</sapn></div>
+        </div>
+          <hr>
+          <div class = "col-md-12">
+          <h1>Days Since Recognition</h1>
+          
+            <div class="information-chat">
+                <span class="color green-color"></span><sapn> < 45 in good shape</sapn>
+            </div>
+            <div class="information-chat">
+                <span class="color golden-color"></span><sapn>45 ~ 90 Keep an eye out</sapn>
+            </div>
+            <div class="information-chat">
+                <span class="color red-color"></span><sapn> > 90 look for great work</sapn>
+            </div>
+        </div>
+            <hr/>
+             <div class = "col-md-12">
+                 <div class="col-md-9">
+                <sapn> K. Bankhead</sapn> <span class="text-red float-right">N.A</span>
+            </div>
+            <div class="col-md-9">
+                <sapn>B. Bishop</sapn><span class="text-gold float-right">50</span>
+            </div>
+            <div class="col-md-9">
+                <sapn> C. Mayfield</sapn><span class="text-green float-right">21</span>
+            </div>
+             </div>
+
+        </div>
     </div>
 </div>
 <!-- END MAIN CONTENT -->
